--- a/main.html
+++ b/main.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Ejercicio de IDs y clases CSS</title>
-    <!-- Entren a la hoja de estilo en el href del tag link de abajo y copienla -->
-    <link rel="stylesheet" href="ejercicio_clases_ids_css_starwars.css" type="text/css">
+    
+    <link rel="stylesheet" href="starwars.css" type="text/css">
 
   </head>
   <body>
